<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <Button
            style="@style/MainButton"
            android:id="@+id/start_game"
            android:text="@string/start_game" />

        <Button
            style="@style/MainButton"
            android:id="@+id/score"
            android:text="@string/score" />

        <Button
            style="@style/MainButton"
            android:id="@+id/exit"
            android:text="@string/exit" />

    </LinearLayout>

</RelativeLayout>